fix runId column spacing, update postversion script

--- a/src/app/containers/visualizer/components/run-selector/run-selector.component.scss
+++ b/src/app/containers/visualizer/components/run-selector/run-selector.component.scss
@@ -12,9 +12,6 @@
     .mat-mdc-header-row {
         font-weight: bold;
     }
-    .mat-column-run_id {
-        width: 1px;
-    }
     .mat-mdc-row:hover {
         background: #eee;
         cursor: pointer;
